--- a/slides/data_science_ecology.Rmd
+++ b/slides/data_science_ecology.Rmd
@@ -959,6 +959,67 @@ class: inverse, center, middle
 
 ---
 class: inverse, center, middle
+# Mapping Ocean Stories Background
+
+---
+class: center
+# Project Workflow
+
+<figure>
+    <img src="images/workflow.png"
+         alt="Diagram of the Data Analysis Workflow" width="650" 
+     height="450">
+    <figcaption>Figure 1. Diagram of the mapping ocean stories data analysis workflow.</figcaption>
+</figure>
+
+???
+
+The database is designed to record spatial, categorical, observational and temporal information about each activity (Figure 2). 
+
+---
+class: center
+# Database Structure
+
+<figure>
+    <img src="images/database_structure.png"
+         alt="Diagram" width="650" 
+         height="450">
+         
+    <figcaption>Figure 2. MOS - Database Basic Structure.</figcaption>
+</figure>
+
+???
+Spatial activities are categorized by coders by their domain, subdomain, and observation type to create a set of standardized observations that can be reliably compared later using queries, summaries, and other systematic methods (Figure 3). 
+
+---
+class: center
+# Project Codebook
+
+<figure>
+    <img src="images/codebook.png"
+         alt="Diagram" width="650" 
+          height="450">
+    <figcaption>Figure 3. Subset of the codebook showing the domain, subdomain, observation type and observation levels for the fisheries domain.</figcaption>
+</figure>
+
+???
+The spatial information for each activity is then classified by the geomethod and type of spatial information conveyed (Figure 4).
+
+---
+class: center
+# Spatial Classification Scheme
+
+<figure>
+    <img src="images/spatial_classification_scheme.png"
+         alt="Diagram" width="650" 
+          height="450">
+    <figcaption>Figure 4. Spatial classification scheme by geomethod.</figcaption>
+</figure>
+
+
+
+---
+class: inverse, center, middle
 # Courses I teach and am interested in teaching
 
 ---
@@ -987,6 +1048,7 @@ class: center
 # Curriculum objectives
 
 `r icons::icon_style(icons::fontawesome("tools", style = "solid"), scale = 2)` 
+
 ### Develop skills in data analysis and statistics and learn to apply these skills with an intersectional lens
 
 --
@@ -1039,7 +1101,7 @@ class: inverse, center, middle
 class: inverse, center, middle
 # Intro to Epidemiological Modeling
 
-<iframe src="https://coa-epi-modelling.netlify.app" width="516" height="716" frameBorder="0"></iframe>
+<iframe src="https://coa-epi-modelling.netlify.app" width="716" height="516" frameBorder="0"></iframe>
 
 ---
 class: inverse, center, middle
